<resources>
    <string name="app_name">WeightTracker</string>
    <string name="login_greet">Welcome to Weight Tracker!</string>
    <string name="username">Enter username</string>
    <string name ="password">Enter password</string>
    <string name="create">Create Account</string>
    <string name="login">Login</string>
    <string name="title_settings">Settings</string>
    <string name="radio_label">Choose your weight measurement</string>
    <string name="title_log">Weight Tracker</string>
    <string name="kilo">Kilograms</string>
    <string name="lbs">Pounds</string>
    <string name="del">Delete</string>
    <string name="fabDescrip">Button for adding a new log to the database</string>
    <string name="smsLabel">Allow SMS Messages</string>
    <string name="goal">Goal Weight:</string>
    <string name="entergoal">Enter here</string>
</resources>