<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/orange_100"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:padding="6dp"
        android:text="@string/login_greet"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_username"
        app:layout_constraintTop_toTopOf="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:autofillHints="username"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edit_password"
        app:layout_constraintTop_toTopOf="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/create_button"
        app:layout_constraintTop_toTopOf="@+id/edit_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginStart="130dp"
        android:text="@string/create"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/create_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="160dp"
        android:layout_marginTop="70dp"
        android:text="@string/login"/>

</androidx.constraintlayout.widget.ConstraintLayout>