<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/orange_100"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:padding="6dp"
        android:text=" "
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/display_weight"
        android:layout_width="120dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/settings_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp"
        android:textColor="#FFF"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="120dp"
        android:layout_marginStart="140dp"
        android:text="Goal"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/radio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/display_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="75dp"
        android:layout_marginStart="50dp"
        android:text="@string/radio_label"/>

    <RadioGroup
        android:id="@+id/weight_radio"
        app:layout_constraintTop_toTopOf="@id/radio_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center">

        <RadioButton android:id="@+id/radio_lbs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lbs"
            android:checked="true"/>

        <RadioButton android:id="@+id/radio_kilo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/kilo"
            android:checked="false"/>

    </RadioGroup>


    <TextView
        android:id="@+id/sms_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/weight_radio"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="16sp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="50dp"
        android:text="@string/smsLabel" />

    <RadioGroup
        android:id="@+id/sms_radio"
        app:layout_constraintTop_toBottomOf="@id/sms_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center">

        <RadioButton android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Yes"
            android:checked="false"/>
    </RadioGroup>

    <TextView
        android:id="@+id/add_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sms_radio"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/goal"/>

    <EditText
        android:id="@+id/enter_weight"
        app:layout_constraintTop_toBottomOf="@+id/add_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:hint="@string/entergoal"/>

    <Button
        android:id="@+id/create_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_weight"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="160dp"
        android:text="Submit"/>


</androidx.constraintlayout.widget.ConstraintLayout>